apps/homelab/navidrome/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: navidrom
  name: navidrome
