apps/homelab/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
  labels:
    app.kubernetes.io/name: navidrome
spec:
  selector:
    app.kubernetes.io/name: navidrome
  ports:
    - port: 80
      targetPort: 4533
      protocol: TCP
